<resources>
    <string name="label_movie_genre">Movie Genre</string>
    <string name="label_view_rating">View Rating</string>
    <string name="label_movie_rating">Movie Rating</string>
    <string name="label_movie_length">Movie Length</string>

    <string-array name="genres_array">
        <item>Action</item>
        <item>Animation</item>
        <item>Anime</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Musical</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Western</item>
    </string-array>

    <string-array name="viewer_ratings_array">
        <item>01–15</item>
        <item>16–30</item>
        <item>31–45</item>
        <item>46–60</item>
        <item>61–75</item>
        <item>76–90</item>
        <item>91–100</item>
    </string-array>

    <string-array name="film_ratings_array">
        <item>G</item>
        <item>PG</item>
        <item>PG-13</item>
        <item>R</item>
        <item>NC-17</item>
    </string-array>
    <string name="app_name">RandomReel</string>
    <string name="label_viewer_ratings">Viewer Ratings</string>
    <string name="randomreel">RandomReel</string>
    <string name="create_account">Create Account</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="create_account1">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="popcorn_image">popcorn</string>
    <string name="search_again">Search Again</string>
    <string name="_1_10">1-10</string>
    <string name="return_to_search">Return to Search</string>
</resources>
