<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="32dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randomreel"
                android:textAlignment="center"
                android:textSize="48sp"
                android:layout_marginBottom="64dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                style="@android:style/Widget.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/intro_btn_background"
                android:text="@string/create_account"
                android:layout_marginBottom="32dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                style="@android:style/Widget.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/intro_btn_background"
                android:text="@string/login"
                android:layout_marginBottom="32dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
