<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:text="@string/label_movie_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginTop="328dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_viewer_ratings"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:dropDownHeight="200dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewMovieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_movie_rating"
        app:layout_constraintTop_toBottomOf="@id/spinner2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <TextView
        android:id="@+id/textViewMovieLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_movie_length"
        app:layout_constraintTop_toBottomOf="@+id/spinner3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/seekBarMovieLength"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:max="349"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewMovieLength"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewMovieLength"/>

</androidx.constraintlayout.widget.ConstraintLayout>

